# text-to-sql

./: .env.example  .gitignore  LICENSE  README.md  config.py  main.py  pyproject.toml
db/: setup.py
src/: 01_basic.py  02_few_shot.py  03_chain_of_thought.py  04_rag.py  05_self_improvement.py
